--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,6 +1,8 @@
 ext {
     // Application
     applicationId = "com.vagnnermartins.baseproject"
+    versionCode = 1
+    versionName = "1.0"
 
     //Android
     androidBuildToolsVersion = "28.0.0"
